css/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*-------------*/
/* base styles */
body {
  font-family: 'Poiret One', cursive;
  font-size: 18px;
  background-color: #FFF9E0;
}

a {
	text-decoration: none;
	color: inherit;
	font-size: 18px;
}

header {
	top: 0;
	background: #a75433;
	height: 100px;
	position: fixed;
	width: 100%;
	opacity: .95;
}

main {
	margin: 30px auto;
	padding-top: 130px;
	width: 960px;
	background: #FFE9E5;
}

h2 {
	font-size: 30px;
	margin: 15px;
}

footer {
	clear: left;
	height: 130px;
	width: 100%;
	background: #a75433;
}
/* site style */
@keyframes buy {
	from {color: red;}
	to {color: yellow;}
}

#history {
	width: 100%;
	text-align: center;
}

#title {
	font-size: 70px;
	font-weight: bolder;
	width: 100%;
	text-align: center;
}


#history img {
	margin-top: 15px;
}

li span {
	display: inline-block;
	width: 300px;
	height: 52px;
}

.inner {
  width: 930px;
  margin: 0 auto;
}

.inner img {
  float: left;
  margin-top: 15px;
}

.inner ul li {
  display: inline-block;
  margin-left: 50px;
  margin-top: 40px;
  color: #fff;
	font-weight: bold;
}

.inner ul li:hover {
	text-decoration: underline;
	cursor: pointer;
}

@keyframes socialeffect {
  from {border-radius: 100%;
				transform: scale(1);}
    to {border-radius: 0%;
				transform:scale(1.5);}
}

.inner li img:hover {
	cursor: pointer;
	animation-name: socialeffect;
	animation-duration: 1.5s;
}

.banner {
  margin-bottom: 30px;
  width: 930px;
  height: auto;
}

.sub_banners li {
  float: left;
  margin-right: 30px;
  width: 300px;
  height: 340px;
  text-align: center;
}

.sub_banners li:last-child {
  margin-right: 0px;
  margin-bottom: 30px;
}

.sub_banners li:first-child {
  color: red;
  font-weight: bolder;
  cursor: pointer;
  animation-iteration-count: infinite;
  animation-name: buy;
  animation-duration: 1s;
}

.footer_inner {
  width: 960px;
  margin: 0 auto;
}

.footer_inner img {
  float: left;
  margin-top: 15px;
}

.footer_inner ul li {
  display: inline-block;
  margin-top: 50px;
  margin-left: 50px;
  color: #fff;
	font-weight: bold;
}

